ux fixes for roadmap page

--- a/app/views/web/ost/roadmap/desktop/_2018-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q2.erb
@@ -20,6 +20,11 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
+            <a href="https://www.youtube.com/watch?v=eRxrHOH0yZw&t=0s&list=PLpjYAvnxmJwLYrPpt1WUIyrdEdS8MYdZ9&index=2&ab_channel=OST" target="_blank" title="OST Roadmap - Youtube">
+              <span class="roadmap-youtube-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
             <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
