--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -55,7 +55,7 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/watch?v=S5CrTitqO2k" target="_blank" title="OST Roadmap - Youtube">
+            <a href="https://www.youtube.com/watch?v=FXG5aBiOobs&index=2&list=PLpjYAvnxmJwK4IJi49WETLOYAnV2nmqzd&t=0s&ab_channel=OST" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
