--- a/app/assets/stylesheets/plugins/bootstrap/scss/_variables.scss
+++ b/app/assets/stylesheets/plugins/bootstrap/scss/_variables.scss
@@ -123,7 +123,8 @@ $spacers: map-merge((
   2: ($spacer * .5),
   3: $spacer,
   4: ($spacer * 1.5),
-  5: ($spacer * 3)
+  5: ($spacer * 3),
+  6: ($spacer * 5)
 ), $spacers);
 
 // This variable affects the `.h-*` and `.w-*` classes.
