adding box shadow for categories

--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -253,6 +253,9 @@ body{
   &.p-15-10{
     padding: 15px 10px;
   }
+  &.category-box-shadow{
+    box-shadow: 0 10px 40px -5px rgba(194, 206, 206, 0.3);
+  }
 }
 
 
