--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -28,7 +28,7 @@
     <div class="row h-100">
 
       <div class="col-4 d-flex">
-        <div class="container-content categoriesToAnimate py-0 pl-3 pr-0">
+        <div class="container-content categoriesToAnimate py-0 pl-3 pr-0 category-box-shadow">
           <div class="row h-100">
             <div class="col-8 pr-0 category">
               <div class="title first pt-3">Infrastructure</div>
@@ -46,7 +46,7 @@
       </div>
 
       <div class="col-4 d-flex">
-        <div class="container-content categoriesToAnimate py-0 pl-3 pr-1">
+        <div class="container-content categoriesToAnimate py-0 pl-3 pr-1 category-box-shadow">
           <div class="row h-100">
             <div class="col-8 pr-0 category">
               <div class="title second pt-3">Developer Tools</div>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="col-4 d-flex">
-        <div class="container-content categoriesToAnimate py-0 pl-3">
+        <div class="container-content categoriesToAnimate py-0 pl-3 category-box-shadow">
           <div class="row h-100">
             <div class="col-8  pr-0 category">
               <div class="title third pt-3">Btx Exchange</div>
