fixes for mobile and desktop

--- a/app/assets/stylesheets/web/ost/roadmap/Index.scss
+++ b/app/assets/stylesheets/web/ost/roadmap/Index.scss
@@ -413,6 +413,12 @@ body{
   }
 }
 
+.mobile-drop-down{
+  min-width: 100%;
+  z-index: 1;
+  background-color: #f2f8f8;
+}
+
 
 .q1-bg{
   background-size: contain;
