--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -200,6 +200,7 @@
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Alpha</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
@@ -241,6 +242,7 @@
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Mosaic Beta</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
