fixes for mobile dropdown

--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -7,36 +7,38 @@
     </div>
   </div>
 
-  <div class="row mobile-drop-down">
+  <div class="row">
     <div class="col-12">
-      <span class="dropdown-el">
-        <input type="radio" name="sortType" value="Relevance" checked="checked" id="infrastructure">
-        <label for="infrastructure" class="first d-flex align-items-center">
-          <svg>
-          <switch>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-infrastructure"></use>
-          </switch>
-          </svg>
-          INFRASTRUCTURE</label>
-        <input type="radio" name="sortType" value="Popularity" id="developer-tools">
-        <label for="developer-tools" class="second d-flex align-items-center">
-          <svg>
+      <div class="mobile-drop-down">
+        <span class="dropdown-el">
+          <input type="radio" name="sortType" value="Relevance" checked="checked" id="infrastructure">
+          <label for="infrastructure" class="first d-flex align-items-center">
+            <svg>
             <switch>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-developer-tools"></use>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-infrastructure"></use>
             </switch>
-          </svg>
-          DEVELOPER TOOLS
-        </label>
-        <input type="radio" name="sortType" value="PriceIncreasing" id="btx-exchange">
-        <label for="btx-exchange" class="third d-flex align-items-center">
-          <svg>
-          <switch>
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-btx-exchange"></use>
-          </switch>
-          </svg>
-          BT EXCHANGE
-        </label>
-      </span>
+            </svg>
+            INFRASTRUCTURE</label>
+          <input type="radio" name="sortType" value="Popularity" id="developer-tools">
+          <label for="developer-tools" class="second d-flex align-items-center">
+            <svg>
+              <switch>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-developer-tools"></use>
+              </switch>
+            </svg>
+            DEVELOPER TOOLS
+          </label>
+          <input type="radio" name="sortType" value="PriceIncreasing" id="btx-exchange">
+          <label for="btx-exchange" class="third d-flex align-items-center">
+            <svg>
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-btx-exchange"></use>
+            </switch>
+            </svg>
+            BT EXCHANGE
+          </label>
+        </span>
+      </div>
     </div>
   </div>
 
