--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -27,7 +27,7 @@
   <div class="col-12 categoriesToAnimateContainer">
     <div class="row h-100">
 
-      <div class="col-4 d-flex">
+      <div class="col-4 d-flex category-parent">
         <div class="container-content categoriesToAnimate py-0 pl-3 pr-0 category-box-shadow">
           <div class="row h-100">
             <div class="col-8 pr-0 category">
@@ -45,7 +45,7 @@
         </div>
       </div>
 
-      <div class="col-4 d-flex">
+      <div class="col-4 d-flex category-parent">
         <div class="container-content categoriesToAnimate py-0 pl-3 pr-1 category-box-shadow">
           <div class="row h-100">
             <div class="col-8 pr-0 category">
