Read More in other tab

--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -69,7 +69,7 @@
         <ul class="desc-lines">
           <li>Wallet-lite Ledger & Balance APIs</li>
         </ul>
-        <a href="/challenges-2" class="d-block more-desc" title="Read More">Read More</a>
+        <a href="/challenges-2" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
