--- a/app/views/web/ost/roadmap/desktop/_2018-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q2.erb
@@ -34,7 +34,7 @@
         <ul class="desc-lines">
           <li>Token Transfers via API</li>
         </ul>
-        <a href="/challenges" class="d-block more-desc" title="Read More">Read More</a>
+        <a href="/challenges" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
