--- a/app/views/web/ost/roadmap/desktop/_2018-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q1.erb
@@ -12,7 +12,7 @@
       <div class="row bg-line first">
         <div class="col-12 pt-5"></div>
       </div>
-      <div class="row h-100">
+      <div class="row h-100" style="flex: 1">
         <div class="col-12 d-flex flex-column">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto p-0" style="font-size: 0">
