--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -8,9 +8,9 @@
   } %>
 
   <div class="row bg-h-border position-relative">
-    <div class="col-4">
-      <div class="row h-100">
-        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+    <!--<div class="col-4">-->
+      <!--<div class="row h-100">-->
+        <div class="col-2 bg-line first py-5 d-flex align-items-center">
           <div class="container-content p-15-10">
             <div class="text-bold">OpenST Protocol</div>
             <div class="status">Status: Complete</div>
@@ -26,7 +26,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+        <div class="col-2 bg-line first py-5 d-flex align-items-center">
           <div class="container-content p-15-10">
             <div class="text-bold">OpenST Mosaic Paper</div>
             <div class="status">Status: Complete</div>
@@ -47,8 +47,8 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
+      <!--</div>-->
+    <!--</div>-->
     <div class="col-4 bg-line second py-5 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">OST KIT Alpha 3</div>
