--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -34,7 +34,7 @@
               <div class="title first pt-3">Infrastructure</div>
               <p class="desc">Enables scalable decentralized token economies.</p>
             </div>
-            <div class="col-4">
+            <div class="col-4 h-100">
               <svg class="h-100 w-100 d-block">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-infrastructure"></use>
@@ -52,7 +52,7 @@
               <div class="title second pt-3">Developer Tools</div>
               <p class="desc">APIs, SDKs, and dashboards for integrating and managing Branded Tokens.</p>
             </div>
-            <div class="col-4">
+            <div class="col-4 h-100">
               <svg class="h-100 w-100 d-block">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-developer-tools"></use>
@@ -70,7 +70,7 @@
               <div class="title third pt-3">Btx Exchange</div>
               <p class="desc">Liquidity solutions between tokens, across blockchains, and with fiat currencies.</p>
             </div>
-            <div class="col-4">
+            <div class="col-4 h-100">
               <svg class="h-100 w-100 d-block">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-btx-exchange"></use>
