--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -51,7 +51,9 @@
         <div class="text-bold">OST KIT Alpha 4</div>
         <div class="status">Status: In Progress</div>
         <ul class="desc-lines">
-          <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
+          <li>Wallet SDK</li>
+          <li>Simple Smart Contracts</li>
+          <li>Scalability & Performance</li>
         </ul>
       </div>
     </div>
