--- a/app/views/web/ost/roadmap/desktop/_2019-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q1.erb
@@ -21,8 +21,12 @@
     </div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold text-uppercase">OST KIT Beta</div>
+        <div class="text-bold">OST KIT Beta</div>
         <div class="status">Status: Upcoming</div>
+        <ul class="desc-lines">
+          <li>OST KYC Integration</li>
+          <li>OST Wallet Beta</li>
+        </ul>
       </div>
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
