--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -3,7 +3,7 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q2',
-    desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+    desc_html: '<span class="text-bold">OpenST Protocol 0.10.1 Non-Fungible Tokens & Token Engineering Modules</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
@@ -16,8 +16,12 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST KIT Release<br/>
-          OST Wallet Release</div>
+        <div class="text-bold">OST KIT Release
+          <br/>
+          OST Wallet Release
+          <br/>
+          OST KIT NFT
+        </div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
