--- a/app/views/web/ost/roadmap/desktop/_2019-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q3.erb
@@ -3,7 +3,7 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q3',
-    desc_html: '<span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.'
+    desc_html: '<span class="text-bold">OpenST Protocol 0.10.2 3rd Party Wallets SDK</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
