--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -12,7 +12,7 @@
   <div class="row bg-h-border position-relative">
     <div class="col-4 bg-line first py-5 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OpenST Protocol</div>
+        <div class="text-bold">OpenST Protocol 0.9.0, 0.9.1</div>
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
@@ -33,8 +33,8 @@
         </ul>
         <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/openst-protocol-0.9.1@2x.png" class="img-fluid d-block my-3"/>
         <ul class="desc-lines">
-          <li>0.9.0 Mint Branded Tokens</li>
-          <li>0.9.1 Mainnet Developer Release</li>
+          <li>Mint Branded Tokens</li>
+          <li>Mainnet Developer Release</li>
         </ul>
         <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
       </div>
