--- a/app/views/web/ost/roadmap/desktop/_2018-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q1.erb
@@ -24,7 +24,7 @@
           <div class="row" style="flex: 1">
             <div class="col-6 bg-line first">
               <div class="container-content p-15-10">
-                <div class="text-bold">OpenST Protocol</div>
+                <div class="text-bold">OpenST Protocol 0.9.2</div>
                 <div class="status">Status: Complete</div>
                 <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
                   <li class="list-inline-item">
@@ -34,7 +34,7 @@
                   </li>
                 </ul>
                 <ul class="desc-lines">
-                  <li>0.9.2  Token Transfers</li>
+                  <li>Token Transfers</li>
                 </ul>
               </div>
             </div>
