--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -3,14 +3,17 @@
   <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
     year: '2019',
     quarter: 'Q2',
-    desc_html: '<span class="text-bold">OpenST Protocol 0.10.1 Non-Fungible Tokens & Token Engineering Modules</span>'
+    desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
   } %>
 
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OpenST Protocol 0.10.1 Wallet SDK</div>
+        <div class="text-bold">OpenST Protocol 0.10.1</div>
         <div class="status">Status: Upcoming</div>
+        <ul class="desc-lines">
+          <li>Non-Fungible Tokens & Token Engineering Modules</li>
+        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
@@ -18,7 +21,7 @@
       <div class="container-content">
         <div class="text-bold">OST KIT Release
           <br/>
-          OST Wallet Release
+          OST UNIVERSAL WALLET
           <br/>
           OST KIT NFT
         </div>
