--- a/app/views/web/ost/roadmap/desktop/_2020-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q1.erb
@@ -14,7 +14,7 @@
     <div class="col-2 bg-line first py-6 d-flex align-items-center"></div>
     <div class="col-4 bg-line second py-6 d-flex align-items-center">
       <div class="container-content">
-        <div class="text-bold">OST Economy Optimization</div>
+        <div class="text-bold">OST OPTIMIZATION</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
