--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-12 bg-line first pt-5">
     <div class="container-content">
-      <div class="text-bold">OpenST Protocol</div>
+      <div class="text-bold">OpenST Protocol 0.9.0, 0.9.1</div>
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
@@ -28,8 +28,8 @@
       </ul>
       <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/openst-protocol-0.9.1@2x.png" class="img-fluid d-block my-3"/>
       <ul class="desc-lines">
-        <li>0.9.0 Mint Branded Tokens</li>
-        <li>0.9.1 Mainnet Developer Release</li>
+        <li>Mint Branded Tokens</li>
+        <li>Mainnet Developer Release</li>
       </ul>
       <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read more">Read more</a>
     </div>
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="col-6 d-flex">
         <div class="container-content p-15-10">
-          <div class="text-bold">OpenST Protocol</div>
+          <div class="text-bold">OpenST Protocol 0.9.2</div>
           <div class="status">Status: Complete</div>
           <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
             <li class="list-inline-item">
@@ -64,7 +64,7 @@
             </li>
           </ul>
           <ul class="desc-lines">
-            <li>0.9.2  Token Transfers</li>
+            <li>Token Transfers</li>
           </ul>
         </div>
       </div>
@@ -97,7 +97,7 @@
 <div class="row">
   <div class="col-6 bg-line first pt-5 d-flex">
     <div class="container-content p-15-10">
-      <div class="text-bold">OpenST Protocol</div>
+      <div class="text-bold">OpenST Protocol 0.9.3</div>
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
@@ -107,7 +107,7 @@
         </li>
       </ul>
       <ul class="desc-lines">
-        <li>0.9.3  Cross-chain token-messaging</li>
+        <li>Cross-chain token-messaging</li>
       </ul>
     </div>
   </div>
@@ -217,7 +217,7 @@
       <div class="text-bold">OpenST Protocol 0.10.1</div>
       <div class="status">Status: Upcoming</div>
       <ul class="desc-lines">
-        <li>Wallet SDK</li>
+        <li>Non-Fungible Tokens & Token Engineering Modules</li>
       </ul>
     </div>
   </div>
@@ -235,7 +235,7 @@
       <div class="text-bold">OpenST Protocol 0.10.2</div>
       <div class="status">Status: Upcoming</div>
       <ul class="desc-lines">
-        <li>Non-Fungible Tokens & Token Engineering Modules</li>
+        <li>3rd Party Wallets SDK</li>
       </ul>
     </div>
   </div>
