--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -12,7 +12,7 @@
       <!--<div class="row h-100">-->
         <div class="col-2 bg-line first py-5 d-flex align-items-center">
           <div class="container-content p-15-10">
-            <div class="text-bold">OpenST Protocol</div>
+            <div class="text-bold">OpenST Protocol 0.9.3</div>
             <div class="status">Status: Complete</div>
             <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
               <li class="list-inline-item">
@@ -22,7 +22,7 @@
               </li>
             </ul>
             <ul class="desc-lines">
-              <li>0.9.3  Cross-chain token-messaging</li>
+              <li>Cross-chain token-messaging</li>
             </ul>
           </div>
         </div>
