--- a/app/views/web/ost/roadmap/desktop/_2019-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q1.erb
@@ -9,8 +9,11 @@
   <div class="row bg-h-border position-relative">
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
       <div class="container-content p-15-10">
-        <div class="text-bold">OpenST Protocol 0.10.0 Mainnet Beta</div>
+        <div class="text-bold">OpenST Protocol 0.10.0</div>
         <div class="status">Status: Upcoming</div>
+        <ul class="desc-lines">
+          <li>Mainnet Beta</li>
+        </ul>
       </div>
     </div>
     <div class="col-2 bg-line first py-6 d-flex align-items-center">
