--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -107,7 +107,9 @@
       <div class="text-bold">OST KIT Alpha 4</div>
       <div class="status">Status: Progress</div>
       <ul class="desc-lines">
-        <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
+        <li>Wallet SDK</li>
+        <li>Simple Smart Contracts</li>
+        <li>Scalability & Performance</li>
       </ul>
     </div>
   </div>
@@ -124,6 +126,10 @@
     <div class="container-content p-15-10">
       <div class="text-bold">OST KIT Beta</div>
       <div class="status">Status: Upcoming</div>
+      <ul class="desc-lines">
+        <li>OST KYC Integration</li>
+        <li>OST Wallet Beta</li>
+      </ul>
     </div>
   </div>
 </div>
@@ -138,7 +144,8 @@
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OST KIT Release</div>
-      <div class="text-bold">OST Wallet Release</div>
+      <div class="text-bold">OST UNIVERSAL WALLET</div>
+      <div class="text-bold">OST KIT NFT</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
@@ -153,8 +160,23 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST KIT Economy Stability</div>
-      <div class="text-bold">OST KIT Analytics </div>
+      <div class="text-bold">OST STABLE</div>
+      <div class="text-bold">OST ANALYTICS</div>
+      <div class="status">Status: Upcoming</div>
+    </div>
+  </div>
+</div>
+
+<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
+    year: '2019',
+    quarter: 'Q4',
+    desc_html: '<span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>'
+} %>
+
+<div class="row">
+  <div class="col-12 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OST MARKETING</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
@@ -173,7 +195,7 @@
 <div class="row">
   <div class="col-12 bg-line second pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OST Economy Optimization</div>
+      <div class="text-bold">OST OPTIMIZATION</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
