highlighting the current quarter

--- a/app/views/web/ost/roadmap/desktop/_quarters.erb
+++ b/app/views/web/ost/roadmap/desktop/_quarters.erb
@@ -22,7 +22,7 @@
                   <li class="quarter-item" data-id="2018-q2">
                     <a href="#2018-q2" class="smooth-scroll">Q2</a>
                   </li>
-                  <li class="quarter-item" data-id="2018-q3">
+                  <li class="quarter-item current-quarter" data-id="2018-q3">
                     <a href="#2018-q3" class="smooth-scroll">Q3</a>
                   </li>
                   <li class="quarter-item" data-id="2018-q4">
