highlighting the current quarter

--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -67,7 +67,7 @@
         <div class="container-content categoriesToAnimate py-0 pl-3 category-box-shadow">
           <div class="row h-100">
             <div class="col-8  pr-0 category">
-              <div class="title third pt-3">Btx Exchange</div>
+              <div class="title third pt-3">Bt Exchange</div>
               <p class="desc">Liquidity solutions between tokens, across blockchains, and with fiat currencies.</p>
             </div>
             <div class="col-4 h-100">
