adding podcast social icon in the header and footer

--- a/app/assets/stylesheets/web/common/_icons.scss
+++ b/app/assets/stylesheets/web/common/_icons.scss
@@ -1,5 +1,5 @@
-$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v6-@2x.png";
-$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v6-@1x.png";
+$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v7-@2x.png";
+$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v7-@1x.png";
 
 @mixin icon-generator($width,$height,$posX,$posY,$offsetHover,$offsetActive,$scale:100) {
   background-image: url($sprite-location);
@@ -82,6 +82,10 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v6
   @include icon-generator(98px, 98px, -520px, -232px, -637px, -637px, 30);
 }
 
+.header-social-podcast-icon{
+  @include icon-generator(98px, 98px, -520px, -450px, -637px, -637px, 30);
+}
+
 
 
 // Footer social icons CSS
@@ -119,6 +123,10 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v6
 
 .footer-social-gitter-icon{
   @include icon-generator(98px, 98px, -520px, -338px, -637px, -637px, 40);
+}
+
+.footer-social-podcast-icon{
+  @include icon-generator(98px, 98px, -520px, -450px, -637px, -637px, 40);
 }
 
 
