--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -232,6 +232,11 @@
       <div class="d-none d-md-inline ml-auto" style="font-size: 0">
         <ul class="p-0 m-0">
           <li>
+            <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" target="_blank" title="OST - Podcast">
+              <span class="header-social-podcast-icon"></span>
+            </a>
+          </li>
+          <li class="ml-2">
             <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
               <span class="header-social-telegram-icon"></span>
             </a>
@@ -246,11 +251,11 @@
               <span class="header-social-medium-icon"></span>
             </a>
           </li>
-          <li class="ml-2">
-            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
-              <span class="header-social-linkedIn-icon"></span>
-            </a>
-          </li>
+<!--          <li class="ml-2">-->
+<!--            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">-->
+<!--              <span class="header-social-linkedIn-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
           <li class="ml-2">
             <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
               <span class="header-social-facebook-icon"></span>
