--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -37,7 +37,7 @@
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">Swap BT for BT, ETH, BTC</div>
+      <div class="text-bold">Swap BT for BT, ETH, BTC, and in-kind redemption partners.</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
