--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -49,6 +49,11 @@
             <h6 class="text-uppercase">Join The Community</h6>
             <ul class="footer-nav list-unstyled" style="font-size: 0">
               <li>
+                <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" target="_blank" title="OST - Podcast">
+                  <span class="footer-social-podcast-icon"></span>
+                </a>
+              </li>
+              <li>
                 <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
                   <span class="footer-social-telegram-icon"></span>
                 </a>
