--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -10,7 +10,7 @@
     <div class="col-2 bg-line first py-5 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Protocol 0.9.4</div>
-        <div class="status">Status: In Complete</div>
+        <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
             <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" target="_blank" title="OST Roadmap - Youtube">
