--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -144,7 +144,7 @@
   <div class="col-12 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 0.9.4</div>
-      <div class="status">Status: In Progress</div>
+      <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
           <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" target="_blank" title="OST Roadmap - Youtube">
