--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -59,7 +59,7 @@
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold text-uppercase">Redeem BT for OST</div>
+        <div class="text-bold">Redeem BT for OST</div>
         <div class="status">Status: In Progress</div>
       </div>
     </div>
