--- a/app/views/web/ost/roadmap/desktop/_2019-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q1.erb
@@ -34,7 +34,7 @@
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold text-uppercase">Swap BT for ETH Beta</div>
+        <div class="text-bold">Swap BT for ETH Beta</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
