--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -30,7 +30,7 @@
     </div>
     <div class="col-4 bg-line third py-6 align-items-center d-flex">
       <div class="container-content">
-        <div class="text-bold text-uppercase">Swap BT for BT, ETH, BTC, and in-kind redemption partners.</div>
+        <div class="text-bold">Swap BT for BT, ETH, BTC, and in-kind redemption partners.</div>
         <div class="status">Status: Upcoming</div>
       </div>
     </div>
