--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -8,8 +8,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-12 col-md-8 mx-auto">
+<div class="row curly-brackets-wrapper">
+  <div class="col-12 col-md-8 mx-auto curly-brackets-content">
     <div class="row">
       <svg width="100%" height="100%" viewBox="0 0 830 98" xmlns="http://www.w3.org/2000/svg">
         <g stroke-width="3" fill="none" fill-rule="evenodd">
