sitemap and mobile fix

--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -73,11 +73,14 @@
   </div>
 </div>
 
-<%= render :partial => "/web/ost/roadmap/mobile/mobile-quarter-header", locals: {
-  year: '2020',
-  quarter: 'Q1',
-  desc_html: '<span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>'
-} %>
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content q1-bg text-center">
+      <span class="year">2020</span>
+      <span class="quarter">Q1</span>
+    </div>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-12 bg-line third pt-5 mx-auto">
