--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -185,7 +185,7 @@
 
 <div class="row quarters-year-row">
   <div class="col-12 mt-5">
-    <div class="container-content q1-bg text-center" style="background-size: cover">
+    <div class="container-content q1-bg text-center">
       <span class="year">2020</span>
       <span class="quarter">Q1</span>
     </div>
