--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="col-7 col-md-6 mx-auto" style="font-size: 0">
         <svg width="100%" height="100%" viewBox="0 0 211 101" xmlns="http://www.w3.org/2000/svg">
-          <path d="M209 100.068V70.693c0-16.268-12.987-29.455-29.007-29.455h-49.182c-22.429 0-25.181-18.463-25.181-41.238 0 22.775-2.753 41.238-25.181 41.238H31.007C14.987 41.238 2 54.425 2 70.693v29.375" stroke="#D3E3E5" stroke-width="3" fill="none" fill-rule="evenodd"/>
+          <path d="M209 100.068V70.693c0-16.268-12.987-29.455-29.007-29.455h-49.182c-22.429 0-25.181-18.463-25.181-41.238 0 22.775-2.753 41.238-25.181 41.238H31.007C14.987 41.238 2 54.425 2 70.693v29.375" stroke="#A5C7D7" stroke-width="3" fill="none" fill-rule="evenodd"/>
         </svg>
       </div>
     </div>
