--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -38,7 +38,7 @@
                     <% end %>
                     <% if member['members_list_website'].present? %>
                       <% if member['members_list_linkedIn'].present? || member['members_list_twitter'].present? || member['members_list_medium'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_website']) %>">Website</a>
+                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_website']) %>">OST LIVE</a>
                     <% end %>
                   </p>
                 </div>
