--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -79,7 +79,7 @@
         hong_kong_careers_response = (@dynamic_content.data[GlobalConstant::StaticContentFileName.ost_hong_kong_career]['api_response'] || []) rescue []
         if hong_kong_careers_response.present?
       %>
-        <h4 class="mt-4">Hong Kong, China</h4>
+        <h4 class="mt-4">Hong Kong</h4>
 
         <% hong_kong_careers_response.each_with_index do|member, index| %>
 
