--- a/app/assets/stylesheets/web/common/_icons.scss
+++ b/app/assets/stylesheets/web/common/_icons.scss
@@ -1,5 +1,5 @@
-$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v7-@2x.png";
-$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v7-@1x.png";
+$sprite-retina-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v8-@2x.png";
+$sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v8-@1x.png";
 
 @mixin icon-generator($width,$height,$posX,$posY,$offsetHover,$offsetActive,$scale:100) {
   background-image: url($sprite-location);
@@ -47,6 +47,12 @@ $sprite-location: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-sprite-v7
 }
 .buy-ost-idcm-icon{
   @include icon-generator(156px, 52px, 1px, -424px, -261px, 1px, 70);
+}
+.buy-ost-kyber-icon{
+  @include icon-generator(114px, 60px, 1px, -499px, -261px, 1px);
+}
+.buy-ost-bittrex-icon{
+  @include icon-generator(190px, 50px, 1px, -592px, -261px, 1px, 80);
 }
 
 // Header social icons CSS
