--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -1,4 +1,4 @@
-<section class="container container-token-buy mt-5" id="token">
+<section class="container container-token-buy py-md-5" id="token">
 
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
@@ -31,9 +31,7 @@
                 <a href="https://www.hbg.com/ost_eth/exchange/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
-          </div>
 
-          <div class="row justify-content-center">
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
               <a class="d-inline-block" href="https://www.upbit.com/" target="_blank" title="Buy OST on Upbit">
                 <span class="buy-ost-upbit-icon"></span>
@@ -56,6 +54,23 @@
               </a>
               <div class="btn-container mt-4 mb-5">
                 <a href="https://www.idcm.io/trading/OST_BTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
+              <a class="d-inline-block" href="https://kyber.network/swap/eth_knc" target="_blank" title="Buy OST on Kyber">
+                <span class="buy-ost-kyber-icon"></span>
+              </a>
+              <div class="btn-container mt-4 mb-5">
+                <a href="https://kyber.network/swap/eth_knc" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
+              <a class="d-inline-block" href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" title="Buy OST on Bittrex">
+                <span class="buy-ost-bittrex-icon"></span>
+              </a>
+              <div class="btn-container mt-4 mb-5">
+                <a href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
           </div>
