--- a/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/EventsCarousel.scss
@@ -1,12 +1,11 @@
 .container-upcoming-events{
-  background-color: #f4f8f9;
   .content-wrapper{
     min-height: 80px;
     overflow: hidden;
     border-radius: 3px;
     position: relative;
     background-color: #fff;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.06);
+    box-shadow:  3px 1px 12px 2px rgba(0, 0, 0, 0.06)
   }
   .svg-icon{
     position: absolute;
@@ -87,6 +86,7 @@
 .slick-slide{
   .bg-color {
     padding: 0 7px;
+    margin: 10px;
     a{
       &:focus{
         outline: none;
