--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -42,6 +42,9 @@ h1, h2, h3, h4, h5, h6{
   }
   .illustration{
     .btn-play{
+      width: 54px;
+      height: 54px;
+      border-radius: 50%;
       position: absolute;
       z-index: 1;
       left: 50%;
@@ -58,6 +61,7 @@ h1, h2, h3, h4, h5, h6{
           width:100%;
           height:100%;
           fill: #34445b;
+          margin-left: -8px;
         }
       }
 
