--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -3,12 +3,12 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2 class="header-blue-900">Blockchain Infrastructure to Empower New Economies</h2>
+        <h2 class="header-blue-900">Empowering Decentralized Economies</h2>
         <p class="mt-3">
           OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">Discover OST KIT⍺</a>
-        <a href="/partners" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">How it works</a>
+        <a href="/partners" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Develop with us</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
@@ -21,7 +21,7 @@
                 </switch>
               </svg>
             </div>
-            <span class="align-middle">Watch Intro</span>
+            <span class="align-middle"></span>
           </div>
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
         </div>
