--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -6,6 +6,8 @@
  *= require web/ost/index/HomeCarousel
  *= require web/ost/index/OstBuy
  *= require web/ost/index/OstTeam
+ *= require web/ost/roadmap/Index
+ *= require web/ost/roadmap/Animate
  *= require web/ost/index/EventsCarousel
  *= require web/ost/index/Technology
  *= require plugins/slick/slick
