--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -3,7 +3,8 @@
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/events_carousel" %>
-<%= render :partial => "/web/ost/index/partners" %>
+<%#= render :partial => "/web/ost/index/partners" %>
+<%= render :partial => "/web/ost/index/roadmap" %>
 <%= render :partial => "/web/ost/index/home_carousel" %>
 <%= render :partial => "/web/ost/index/blockchain_toolkit" %>
 <%= render :partial => "/web/ost/index/openst_technology" %>
@@ -13,3 +14,4 @@
 <%= render :partial => "/web/ost/index/ost_team" %>
 <%= render :partial => "/web/ost/index/subscribe" %>
 <%= render :partial => "/shared/web/modals/help_video" %>
+<%= render :partial => "/web/ost/roadmap/roadmap_svg_sprite" %>
