--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -4,7 +4,7 @@
       <div class="row py-5">
         <div class="col-12">
           <div class="container-subscribe">
-            <h1>Get the Latest Updates from OST</h1>
+            <h2 class="font-weight-normal">Signup For Updates</h2>
             <form class="ost-form" id="subscribe-form">
               <div class="subscribe">
                 <div class="form-group mb-0">
