--- a/app/views/web/ost/index/_2018-q4.erb
+++ b/app/views/web/ost/index/_2018-q4.erb
@@ -7,7 +7,7 @@
   } %>
 
   <div class="row bg-h-border position-relative">
-    <div class="col-2 bg-line first pt-5 d-flex align-items-center">
+    <div class="col-2 bg-line first pt-5 mb-5 d-flex align-items-center">
       <div class="container-content p-15-10">
         <div class="text-bold">OpenST Protocol 0.9.4</div>
         <div class="status">Status: Complete</div>
@@ -45,8 +45,8 @@
         </ul>
       </div>
     </div>
-    <div class="col-2 bg-line first pt-5 d-flex align-items-center"></div>
-    <div class="col-4 bg-line second pt-5 d-flex align-items-center">
+    <div class="col-2 bg-line first pt-5 mb-5 d-flex align-items-center"></div>
+    <div class="col-4 bg-line second pt-5 mb-5 d-flex align-items-center">
       <div class="container-content">
         <div class="text-bold">OST KIT Alpha 4</div>
         <div class="status">Status: In Progress</div>
@@ -57,7 +57,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-4 bg-line third pt-5 align-items-center d-flex">
+    <div class="col-4 bg-line third pt-5 mb-5 align-items-center d-flex">
       <div class="container-content">
         <div class="text-bold">Redeem BT for OST</div>
         <div class="status">Status: In Progress</div>
