--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -3,11 +3,11 @@
     <div class="col-12 col-sm-6 p-sm-0">
       <div class="row">
         <div class="col-12 col-sm-6 col-md-8 mx-auto">
-            <h1>Meet the Team</h1>
-            <p class="text-left">Team OST innovates at the nexus of blockchain, cryptocurrency, software solutions, and the future of business and society.</p>
+            <h3>On a mission to bring blockchain to the mainstream</h3>
+            <p class="text-left">Blockchain technologies hold enormous potential to transform business and improve society.</p>
             <p class="text-left">OST is a community driven project. Your feedback is the engine that will drive the project forward. We invite you to connect with us, become a link in our chain, and help us unlock the power of blockchain for all.</p>
             <a href="<%= GlobalConstant::Base.root_url %>team" class="btn btn-primary my-2" title="Meet The team">Meet The team</a>
-            <a href="<%= GlobalConstant::Base.root_url %>careers" class="btn btn-secondary my-2 ml-xl-4" title="Join Us">Join Us</a>
+            <a href="<%= GlobalConstant::Base.root_url %>careers" class="btn btn-secondary my-2 ml-xl-4" title="Work with Us">Work with Us</a>
         </div>
       </div>
     </div>
