--- a/app/views/web/ost/index/_roadmap.erb
+++ b/app/views/web/ost/index/_roadmap.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 roadmap-container">
         <%= render :partial => "/web/ost/roadmap/desktop/roadmap-categories" %>
-        <div class="my-5">
+        <div class="mt-5">
           <%= render :partial => "/web/ost/index/2018-q4" %>
         </div>
       </div>
