--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-ost-team">
+<section class="container container-ost-team">
   <div class="row align-items-center h-100">
     <div class="col-12 col-sm-6 p-sm-0">
       <div class="row">
@@ -12,11 +12,72 @@
       </div>
     </div>
     <div class="col-12 col-sm-6 p-md-0">
-      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg" 
-        class="img-fluid responsively-lazy"
-        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg"
-        srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
-      />
+<!--      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg" -->
+<!--        class="img-fluid responsively-lazy"-->
+<!--        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg"-->
+<!--        srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
+<!--      />-->
+
+<!--      <h1>Packery Chessboard photo grid</h1>-->
+
+      <div class="grid">
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?lion');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?tiger');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dog');"></div>
+        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?cat');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?monkey');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?fish');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?pig');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?zebra');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?horse');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?cow');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bird');"></div>
+        <div class="grid-item" style="background-image: url('https://sourcet.unsplash.com/200x200?whale');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?hippo');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?snake');"></div>
+        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?crow');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?sparrow');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?owl');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?eagle');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?buffalo');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?crab');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?octopus');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?grasshopper');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?camel');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?elephant');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?goose');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?rat');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?fox');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?deer');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bear');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?shark');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bat');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?beaver');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?blackbuck');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?catfish');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?starfish');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?duck');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?peacock');"></div>
+        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?raven');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?wolf');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dove');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dragon');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?penguin');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?rabbit');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?tortoise');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?flamingo');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?giraffe');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?goose');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?gull');"></div>
+        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?hawk');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?panda');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?cheeta');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?panther');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?hyena');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?jaguar');"></div>
+        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?lemur');"></div>
+      </div>
+
     </div>
   </div>
 </section>
